fix: Throw hapi validation errors as 4xx instead of server error